# blank

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  biome.jsonc  docker-compose.yml  template.env
.cursor/rules/: api.mdc  backend.mdc  frontend.mdc  general.mdc
.github/workflows/: build-frontend.yml  test-backend.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/blank/api/: deps.py  interfaces.py  main.py
backend/blank/cli/: main.py
backend/blank/db/: models.py  redis.py  session.py
backend/blank/db/migrations/: env.py
backend/blank/db/migrations/versions/: 55821e91e400_create_tasks.py
backend/blank/jobs/: celery.py  tasks.py
backend/blank/utils/: bucket.py  logger.py
backend/blanket/api/: deps.py  interfaces.py  main.py
backend/blanket/cli/: main.py
backend/blanket/db/: commands.py  models.py  pg_objects.py  redis.py  session.py
backend/blanket/db/migrations/: env.py
backend/blanket/db/migrations/versions/: a83fce0a6509_add_rls_policies.py  f98950563639_add_user_table_and_relation.py
backend/blanket/io/: bucket.py  click.py  env.py  log.py
backend/blanket/jobs/: celery.py  schedule.py  tasks.py
backend/test/: __init__.py  conftest.py  factories.py
backend/test/api/: test_tasks_api.py
frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/client/: client.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: Footer.tsx  Navigation.tsx
frontend/src/features/about/: AboutPage.tsx
frontend/src/features/home/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  HomePage.tsx  Navigation.tsx
frontend/src/routes/: __root.tsx  about.tsx  index.tsx
frontend/src/test/: setup.ts
infra/: create_admin_db_user.fish  create_admin_db_user.py  create_api_db_user.fish  create_api_db_user.py
