[project]
name = "blanket"
version = "0.2.0"
authors = [
    { name = "Faiz Surani", email = "faiz@calderapbc.com" },
]
description = "A blanket project"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = "~=3.11.10"
dependencies = [
    "fastapi[standard]>=0.114.2",
    "pydantic>=2.9.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.2",
    "gunicorn>=23.0.0",
    "boto3>=1.38.41",
    "celery>=5.5.3",
    "redis>=6.2.0",
    "alembic-utils>=0.8.8",
    "structlog>=25.4.0",
    "sentry-sdk[celery,fastapi,sqlalchemy]>=2.30.0",
    "geoalchemy2>=0.18.0",
    "pytz>=2025.2",
    "aioboto3>=15.5.0",
    "rich-click>=1.9.4",
    "tqdm>=4.67.1",
    "strenum>=0.4.15",
    "types-aiobotocore>=2.26.0.post1",
    "asyncpg>=0.31.0",
    "uvloop>=0.22.1",
    "fastapi-auth0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "ipdb>=0.13.13",
    "ipython>=8.27.0",
    "pgcli>=4.3.0",
    "pre-commit>=3.8.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-postgresql>=7.0.2",
    "ruff>=0.12.0",
]

[project.urls]
homepage = "https://github.com/calderapbc/blanket"

[project.scripts]
blanket = "blanket.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "E", "I", "N", "PTH", "COM", "C4", "UP"]
extend-ignore = ["COM812", "E712", "E501", "B904"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.uv.sources]
fastapi-auth0 = { git = "https://github.com/calderapbc/fastapi-auth0", rev = "v0.6.0" }
